# cmj4

./: .gitignore  LICENSE  README.md  ddev.sh  dprod.sh  eslint.config.js  manage.py  package.json  pyproject.toml  upprod.sh  uupdev.sh  vite.config.js
_docker/dev/: Dockerfile.Dev  Dockerfile.Dev.Front  docker-compose.yaml  start-dev.sh
_docker/prod/: Dockerfile  docker-compose.yaml  start.sh  start_daphne.sh  start_gunicorn.sh
_docker/prod/nginx/: cmj4_docker.conf
_frontend/src/: App.vue  CounterCounter.vue  main.js
_frontend/src/js/: App.vue  Counter.vue  main.js
_frontend/src/scss/: styles.scss
_templates/: base.html  index.html
cmj4/: asgi.py  celery.py  haystack.py  settings.py  urls.py  wsgi.py
cmj4/core/: __init__.py  apps.py  models.py  routing.py  signals.py  signals_functions.py  tasks.py  urls.py  views.py
cmj4/core/migrations/: 0001_initial.py
cmj4/settings/: fake.py  logs.py  project.py
