[tool.poetry]
name = "cmj4"
version = "4.0.0"
description = "PortalCMJ 4.0"
authors = ["LeandroJatai <leandroroberto.br@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
django = "^4.2.16"
daphne = "^4.1.2"
channels = "^4.1.0"
django-vite = "^3.0.5"
django-extensions = "^3.2.3"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
