[tool.poetry]
name = "cmj4"
version = "4.0.0"
description = "PortalCMJ 4.0"
authors = ["LeandroJatai <leandroroberto.br@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^4.2.16"
daphne = "^4.1.2"
channels = "^4.1.0"
channels-redis = "^4.2.0"
django-vite = "^3.0.5"
django-extensions = "^3.2.3"
python-decouple = "^3.8"
gunicorn = "^23.0.0"
kazoo = "^2.10.0"
twisted = {extras = ["http2", "tls"], version = "^24.7.0"}
redis = "^5.1.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
psycopg = "^3.2.3"
dj-database-url = "^2.2.0"
ipython = "^8.28.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
